@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-24T01:43:44Z",
+  "timestamp" : "2022-07-24T08:18:33Z",
   "count_outdated" : 410,
   "uniques_outdated" : 236,
-  "count" : 436,
-  "uniques" : 252,
+  "count" : 437,
+  "uniques" : 253,
   "clones" : [
     {
       "timestamp": "2022-07-10T00:00:00Z",
@@ -88,6 +88,13 @@
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-07-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
