@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 5,
   "clones": [
     {
@@ -61,6 +61,11 @@
       "timestamp": "2022-07-23T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-07-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
